# pears-gambit

./: .gitignore  CLAUDE.md  README.md  package.json
chess-ui/: .gitignore  README.md  package-lock.json  package.json
chess-ui/src/components/: stockfish.js
chess-ui/src/pages/: index.js
ctx/: 20250720_pear-chess_design.md  20250721_pear-chess_project_plan.md  20250722_worklog_01.md  20250725_worklog_01.md  20250811_plan_stockfish_integration.md
ic_chess/: package-lock.json  tsconfig.json
ic_chess/src/ic_chess_assets/public/: engine.js  index.jsx
legacy/: package-lock.json  sentientmachinelabs-server.js
legacy/chess-ui/: gatsby-config.js
legacy/ic_chess/: README.md  dfx.json  package.json  webpack.config.js
legacy/ng-chess-ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
legacy/ng-chess-ui/src/app/: NgxChessBoardMove.ts  app.component.spec.ts  app.component.ts
legacy/ng-chess-ui/src/app/chess-game/: chess-game.component.html  chess-game.component.scss  chess-game.component.ts
legacy/server/config/: config.js  express.js
ng-chess-ui/: angular.json  package-lock.json  package.json
ng-chess-ui/e2e/src/: app.e2e-spec.ts
ng-chess-ui/src/: index.html  proxy.conf.js  styles.scss
ng-chess-ui/src/app/: StockfishMessageEvent.ts  app.component.html  app.module.ts  chess.service.ts
ng-chess-ui/src/app/chess-game/: chess-game.component.html  chess-game.component.scss  chess-game.component.ts
pear-chess/: .gitignore  CMakeLists.txt  app.js  demo-ai.html  index.html  package-lock.json  package.json  simple-test.js  test-ai-game.js  test-benchmark.js  test-game-fixes.js  test-pear-compatibility.js  test-simple-engine.js  test-simple-uci.js  test-stockfish.js
pear-chess/cmake/: toolchain.cmake  variables.cmake
pear-chess/ctx/: 20250814_updated_stockfish_plan.md
pear-chess/scripts/: build-native.sh  configure-cmake.sh  download-stockfish-source.sh  download-utils.js  platform-utils.js  setup-deps.js  setup-env.ps1  setup-env.sh  test-ai-integration.js  test-build-env.js  test-external-engine.js  test-full-system.js  test-native-engine.js
pear-chess/src/ai/: ai-game.js  analysis.js  benchmark.js  engine-stub.js  external-engine-simple.js  external-engine.js  game-analyzer.js  hints.js  index.js  native-engine.js  opening-book.js  pear-compatibility.md  stockfish-manager.js  uci-protocol.js  uci-simple.js
pear-chess/src/ai/native/: CMakeLists.txt  README.md  binding.cpp  index.js  package.json  stockfish_wrapper.cpp  stockfish_wrapper.h  stockfish_wrapper_real.cpp  test_binding.cpp  uci_interface.cpp  uci_interface.h
pear-chess/src/chess/: board.js  game.js  index.js  moves.js  pgn.js
pear-chess/src/p2p/: core.js  discovery.js  game-history.js  index.js  network-spectator.js  persistence.js  shared-discovery.js  spectator-sync.js  spectator.js  swarm.js  sync.js
pear-chess/src/ui/: game-view.js  lobby.js  sound-manager.js
pear-chess/src/ui/components/: analysis-panel.js  chess-board.js  chess-clock.js
pear-chess/test/: ai.test.js  chess.test.js  cmake_test.cpp  p2p-integration.test.js
server/: routes.js
server/config/env/: all.js  localdev.js
